# legion-protocol

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: admin.rs  bleeding_edge.rs  capabilities.rs  command.rs  error.rs  iron.rs  lib.rs  message.rs  replies.rs  sasl.rs  validation.rs
tests/: admin_tests.rs  integration_tests.rs
