[package]
name = "iron-protocol"
version = "0.1.0"
edition = "2024"
authors = ["IronChat Contributors"]
description = "🦾 Bleeding-edge IRCv3 protocol library for modern IRC clients and servers"
license = "MIT"
repository = "https://github.com/exec/iron-protocol"
homepage = "https://github.com/exec/iron-protocol"
documentation = "https://docs.rs/iron-protocol"
keywords = ["irc", "protocol", "ircv3", "chat", "networking"]
categories = ["network-programming", "parser-implementations", "api-bindings"]
readme = "README.md"

[features]
default = ["std", "serde", "chrono"]
std = []
serde = ["dep:serde", "dep:serde_json"]
chrono = ["dep:chrono"]
server = ["std"]
client = ["std"]
bleeding-edge = []

[dependencies]
# Core dependencies
bytes = "1.9"
thiserror = "2.0"

# Optional feature dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Crypto for SASL
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"

# Additional utilities
regex = "1.11"
once_cell = "1.20"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-test = "0.4"
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.18"

# Benchmarks will be added later
# [[bench]]
# name = "message_parsing"
# harness = false
